--- a/TripleJAuto/TripleJAuto/Web.config
+++ b/TripleJAuto/TripleJAuto/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="WebsiteConnectionString" connectionString="Data Source=triplejauto.ck7ikwx0lgkw.us-east-1.rds.amazonaws.com,1433;Initial Catalog=Website;User ID=Admin;Password=&quot;U%GT4nDTZk|dX-A\ZrS*'%I'mm,A:'&quot;"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
