--- a/TripleJAuto/TripleJAuto/TripleJAuto.csproj
+++ b/TripleJAuto/TripleJAuto/TripleJAuto.csproj
@@ -205,6 +205,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Site.Master" />
+    <Content Include="User_Administration.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Parts.master" />
@@ -480,6 +481,13 @@
     </Compile>
     <Compile Include="tips.aspx.designer.cs">
       <DependentUpon>tips.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User_Administration.aspx.cs">
+      <DependentUpon>User_Administration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User_Administration.aspx.designer.cs">
+      <DependentUpon>User_Administration.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
