--- a/TripleJAuto/TripleJAuto/Web.config
+++ b/TripleJAuto/TripleJAuto/Web.config
@@ -20,6 +20,9 @@
       </controls>
     </pages>
   </system.web>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="none"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
