--- a/TripleJAuto/TripleJAuto/TripleJAuto.csproj
+++ b/TripleJAuto/TripleJAuto/TripleJAuto.csproj
@@ -200,6 +200,7 @@
     <Content Include="AdminPartsReviews.aspx" />
     <Content Include="AdminUserOrders.aspx" />
     <Content Include="AdminLogin.aspx" />
+    <Content Include="SignUp.aspx" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -528,6 +529,13 @@
     </Compile>
     <Compile Include="AdminLogin.aspx.designer.cs">
       <DependentUpon>AdminLogin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SignUp.aspx.cs">
+      <DependentUpon>SignUp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignUp.aspx.designer.cs">
+      <DependentUpon>SignUp.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
