--- a/TripleJAuto/TripleJAuto/TripleJAuto.csproj
+++ b/TripleJAuto/TripleJAuto/TripleJAuto.csproj
@@ -242,6 +242,7 @@
     </Compile>
     <Content Include="App_Code\Cart.cs" />
     <Content Include="App_Code\CartList.cs" />
+    <Content Include="App_Code\ProductContext.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
