--- a/TripleJAuto/TripleJAuto/Web.config
+++ b/TripleJAuto/TripleJAuto/Web.config
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
-    <add name="WebsiteConnectionString" connectionString="Data Source=triplejauto.ck7ikwx0lgkw.us-east-1.rds.amazonaws.com,1433;Initial Catalog=Website;User ID=Admin;Password=&quot;U%GT4nDTZk|dX-A\ZrS*'%I'mm,A:'&quot;"
-      providerName="System.Data.SqlClient" />
+    <add name="WebsiteConnectionString" connectionString="Data Source=triplejauto.ck7ikwx0lgkw.us-east-1.rds.amazonaws.com,1433;Initial Catalog=Website;User ID=Admin;Password=&quot;U%GT4nDTZk|dX-A\ZrS*'%I'mm,A:'&quot;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -21,7 +24,7 @@
     </pages>
   </system.web>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="none"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="none" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -32,7 +35,13 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-      </dependentAssembly>      
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
